--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
     <div class="container">
         <h1>Crônometro</h1>
         <div class="timer">
-            <div class="time" id="minutes">00</div>
+            <div class='time' id='minutes'>00</div>
+            <div class='separator'>:</div>
+            <div class='time' id='seconds'>00</div>
+            <div class='separator'>:</div>
+            <div class='time' id='miliseconds'>000</div>
+            <div class="timeMark" id="minutesMark">00</div>
             <div class="separator">:</div>
-            <div class="time" id="seconds">00</div>
+            <div class="timeMark" id="secondsMark">00</div>
             <div class="separator">:</div>
-            <div class="time" id="miliseconds">000</div>
+            <div class="timeMark" id="millisecondsMark">00</div>
         </div>
         <div class="buttons">
-            <button class="btn" id="startBtn">Iniciar</button>
-            <button class="btn" id="pauseBtn">Pausar</button>
-            <button class="btn" id="resumeBtn">Continuar</button>
-            <button class="btn" id="resetBtn">Resetar</button>
+            <button class="btn" id='startBtn'>Iniciar</button>
+            <button class="btn" id='pauseBtn'>Pausar</button>
+            <button class="btn" id='resumeBtn'>Continuar</button>
+            <button class="btn" id='resetBtn'>Resetar</button>
+            <button class="btn" id='markBtn'>Marcar</button>
         </div>
     </div>
 </body>
